<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_mycart"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/my_cart" />
        <item
            android:id="@+id/nav_myorders"
            android:icon="@drawable/ic_order"
            android:title="@string/my_orders" />
    </group>
</menu>